a skeleton of the project

--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,18 @@ FakesAssemblies/
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
+*.pyc
+*.sty
+*.aux
+*.bbl
+*.blg
+*.fdb_latexmk
+*.fls
+*.out
+*.bak
+*.bib
+*.txt
+*.fuse_hidden000003b900000002
+*.fuse_hidden000004b200000009
+*.fuse_hidden0000062f00000008
+*.thm
